--- a/scout/src/main/res/values/strings.xml
+++ b/scout/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_match_scout">MatchScoutActivity</string>
+    <string name="title_activity_scan">title_activty_scan</string>
 </resources>
