--- a/superscout/src/main/res/values/strings.xml
+++ b/superscout/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_match_scout">title_activity_match_scout</string>
 </resources>
