--- a/scout/src/main/res/values/strings.xml
+++ b/scout/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_match_scout">Match Scouting</string>
+    <string name="title_activity_match_data">Match Data</string>
 </resources>
