--- a/scout/src/main/res/values/strings.xml
+++ b/scout/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
         4 Stars: Decent/Somewhat Consistent\n
         5 Stars: Powerhouse
     </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
