--- a/pit/src/main/res/values/strings.xml
+++ b/pit/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Pit</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Pit Scout</string>
+    <string name="action_localdata">Local Data</string>
+    <string name="menuitem_sync">Sync Data</string>
 </resources>
